fix SSL bug again at fork()

--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -34,7 +34,7 @@
     \centering
     \subfigure[]{
 %    \includegraphics[width=3cm]{figures/naked_leaves/00000240}}
-    \includegraphics[width=6cm]{images/tony.png}}
+    \includegraphics[width=4cm]{images/tony.png}}
   \end{figure}
 \end{frame}
 
@@ -232,7 +232,7 @@
   \frametitle{Greets}
   \begin{itemize}
   \item IAK, Sigsegv, M0nad, Slyfunky , RaphaelSC, pl4nkton, gustavoRobertux, Muzgo, Mente binaria, Otacon...
-  \item HB, F-117, Eremita, Clandestine, Loganbr, Geyslan, Clodonil Trigo...
+  \item HB, F-117, Eremita, Clandestine, Loganbr, Geyslan, mmxm, Clodonil Trigo...
   \item my parents and friends...
   \item https://conviso.com.br/index.php/EN
   \end{itemize}
