--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -28,8 +28,7 @@
   \frametitle{Whoami}
   Author:
   \begin{itemize}
-  \item  Antonio Costa "CoolerVoid" is a computer programmer who loves the Hacker culture,  he work as system analyst at CONVISO, where does some work like a code review, pentest  and security research.
-  \end{itemize}
+  \item  Antonio Costa "CoolerVoid" is a Computer Programmer who loves the Hacker culture, he work as system analyst at CONVISO for three years. Nowadays, Antonio working with code review, pentest and security research with focus on Secure Web Applications and Reverse Engineering and he has speaking in some Brazilian Security Conferences such as YSTS, OWASP Florianopolis and Bsides São Paulo. 
   \begin{figure}[t]
     \centering
     \subfigure[]{
