--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -28,7 +28,8 @@
   \frametitle{Whoami}
   Author:
   \begin{itemize}
-  \item  Antonio Costa "CoolerVoid" is a Computer Programmer who loves the Hacker culture, he work as system analyst at CONVISO for three years. Nowadays, Antonio working with code review, pentest and security research with focus on Secure Web Applications and Reverse Engineering and he has speaking in some Brazilian Security Conferences such as YSTS, OWASP Florianopolis and Bsides São Paulo. 
+  \item  Antonio Costa "CoolerVoid" is a Computer Programmer who loves the Hacker culture, he work as system analyst at CONVISO for three years. Nowadays, Antonio working with code review, pentest and security research with focus on Secure Web Applications and Reverse Engineering and he has speaking in some Brazilian Security Conferences such as YSTS, OWASP Florianopolis and Bsides São Paulo.
+  \end{itemize}
   \begin{figure}[t]
     \centering
     \subfigure[]{
@@ -53,7 +54,7 @@
   \frametitle{Introduction}
   Why this tool is made in C language ?
   \begin{itemize}
-  \item  C have a high delay time for writing and debugging, but i am a man of few friends, i have time to write some codes at weekends, addition of this point, the C language is run at any architecture like Mips,ARM and others... at the future can follow mobile implementations. other benefits of C,  have good performance and high profile to write optimizations, if you think write some lines in ASSEMBLY code with AES-NI or SiMD instructions, i think is good choice. 
+  \item  C have a high delay time for writing and debugging, but no pain no gain, have a fast performance, addition of this point, the C language is run at any architecture like Mips,ARM and others... at the future can follow mobile implementations. other benefits of C,  have good and high profile to write optimizations, if you think write some lines in ASSEMBLY code with AES-NI or SiMD instructions, i think is good choice. 
   \item  Why you not use POO ? in this project i follow "KISS" principe: http://pt.wikipedia.org/wiki/Keep\_It\_Simple
   \item  C language have a lot old school dudes like a kernel hackers... 
   \end{itemize}
@@ -77,7 +78,7 @@
 
 \begin{frame}
   \frametitle{How you can use it}
-  Follow this command to get, decompress, compile and execute:
+  Following this to get, decompress, compile and execute:
   \begin{itemize}
   \item wget https://github.com/CoolerVoid/0d1n/archive/master.zip; 
   \item unzip master.zip; cd 0d1n-master; make; ./0d1n
@@ -145,7 +146,7 @@
 
 \begin{frame}
   \frametitle{Example on XSS Attack}
-  If you follow this command to test application:
+  Following this to test application:
   \begin{itemize}
   \item ./0d1n --host http://localhost/test.php --post "car\_name=\^ \ " --payloads payloads/xss.txt --find\_regex\_list payloads/guess.txt --log name\_log --save\_response 
  \end{itemize}
@@ -231,7 +232,7 @@
   \frametitle{Greets}
   \begin{itemize}
   \item IAK, Sigsegv, M0nad, Slyfunky , RaphaelSC, pl4nkton, gustavoRobertux, Muzgo, Mente binaria, Otacon...
-  \item HB, F-117, Eremita, Clandestine, Loganbr, Geyslan, mmxm, Clodonil Trigo...
+  \item HB, F-117, Eremita, Clandestine, Loganbr, Geyslan, Clodonil Trigo...
   \item my parents and friends...
   \item https://conviso.com.br/index.php/EN
   \end{itemize}
