i am fixing some mistakes...

--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -27,7 +27,7 @@
 \begin{frame}
   \frametitle{Whoami}
   Author:
-  \begin{itemize}  \item  Antonio Costa "CoolerVoid" is a Computer Programmer who loves the Hacker culture, he work as system analyst at CONVISO for three years. Nowadays, Antonio working with code review, pentest and security research with focus on Secure Web Applications and Reverse Engineering and he has speaking in some Brazilian Security Conferences such as YSTS, OWASP Florianopolis and Bsides Sao Paulo.
+  \begin{itemize}  \item  Antonio Costa "CoolerVoid" is a Computer Programmer who loves the Hacker culture, he work as a system analyst at CONVISO for four years. Antonio working with code review, pentest and security research with focus on Secure Web Applications and Reverse Engineering and he has speaking in some Brazilian Security Conferences such as YSTS, OWASP Florianopolis and Bsides Sao Paulo.
   \end{itemize}
   \begin{figure}[t]
     \centering
@@ -42,7 +42,7 @@
   \frametitle{Introduction}
   Software Information:
   \begin{itemize}
-  \item  0d1n is a Open Source web application bruteforcer and Fuzzer, your objective is automate exhaustive tests to search anomalies, at other point view this anomalies can be a vulnerability, these test can  follow web parameters, files, directories, forms and other things. 
+  \item  0d1n is a Open Source web application bruteforcer and Fuzzer,  it’s objective is to automate exhaustive tests to search anomalies. At other point view this anomalies can be a vulnerability, These tests can  follow web parameters, files, directories, forms and others. 
   \item  0d1n held by GPL v3 license: https://github.com/CoolerVoid/0d1n/blob/master/LICENSE.txt
   \end{itemize}
 \end{frame}
@@ -53,9 +53,9 @@
   \frametitle{Introduction}
   Why this tool is made in C language ?
   \begin{itemize}
-  \item  C have a high delay time for writing and debugging, but no pain no gain, have a fast performance, addition of this point, the C language is run at any architecture like Mips,ARM and others... at the future can follow mobile implementations. other benefits of C,  have good and high profile to write optimizations, if you think write some lines in ASSEMBLY code with AES-NI or SiMD instructions, i think is good choice. 
-  \item  Why you not use POO ? in this project i follow "KISS" principe: http://pt.wikipedia.org/wiki/Keep\_It\_Simple
-  \item  C language have a lot old school dudes like a kernel hackers... 
+  \item  C has a high delay time for writing and debugging, but no pain no gain, it has a fast performance, in addition, the C language is run at any architecture like Mips,ARM and others... in the future can follow mobile implementations. Other benefits of C  is that it has good and high profile to write optimizations, if you want to write some lines in ASSEMBLY code with AES-NI or SiMD instructions, this is a good choice. 
+  \item  Why you don't use POO ? in this project i follow "KISS" principe: http://pt.wikipedia.org/wiki/Keep\_It\_Simple
+  \item  C language has a lot of old school dudes like a kernel hackers... 
   \end{itemize}
 \end{frame}
 
@@ -110,7 +110,7 @@
   \begin{itemize}
   \item Tamper is a function to use camouflage in your payload, this way you can try bypass web application firewall
   \item Each options use different technique to try hide payload 
-  \item You need remember to use proxy list per Request to try walk in stealth to work without blacklists.  
+  \item You need to remember to using proxy list per Request to try walk in stealth to work without blacklists.  
   \begin{figure}[t]
     \centering
     \includegraphics[width=7cm]{images/gift2.jpg}
@@ -169,7 +169,7 @@
 
 \begin{frame}
   \frametitle{Example on XSS Attack}
-  If you click at number of Status you can view response with highlights:
+  If you click at the number of Status you can view response with highlights:
   \begin{itemize}
   \begin{figure}[t]    
     \centering
@@ -208,10 +208,10 @@
 \begin{frame}
   \frametitle{Frenetic questions}
   \begin{itemize}
-  \item How do i can enter in auth to fuzz other application ? You need Load cookie jar file.
-  \item how do i can use multiples special chars \^ \ to fuzz more parameters ? Yes you can do it, put more chars \^ \ in the parameters.
-  \item how many threads i can use ? Depend of your machine, i recommend don't send lot a requests for the server, because this is a deep pitfall you can get down the server, if server runs in production you lost money this is very boring...
-  \item Do you have doubt ? send me e-mail...
+  \item How do i enter in auth to fuzz other application ? You need Load cookie jar file.
+  \item how do i use multiples special chars \^ \ to fuzz more parameters ? Yes you can do it, put more chars \^ \ in the parameters.
+  \item how many threads can i use ? Depend of your machine, i recommend don't send a lot of requests for the server, because this is a deep pitfall you can get down the server, if server runs in production you may lost money and this is not good...
+  \item  Do you have any doubts ? e-mail me...
   \end{itemize}
 \end{frame}
 
