--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -51,7 +51,7 @@
 
 \begin{frame}
   \frametitle{Introduction}
-  Why this tool is made in C language ?
+  Why is this tool made in C language ?
   \begin{itemize}
   \item  C has a high delay time for writing and debugging, but no pain no gain, it has a fast performance, in addition, the C language is run at any architecture like Mips,ARM and others... in the future can follow mobile implementations. Other benefits of C  is that it has good and high profile to write optimizations, if you want to write some lines in ASSEMBLY code with AES-NI or SiMD instructions, this is a good choice. 
   \item  Why you don't use POO ? in this project i follow "KISS" principe: http://pt.wikipedia.org/wiki/Keep\_It\_Simple
