fix error in command of doc

--- a/doc/odin.tex
+++ b/doc/odin.tex
@@ -198,7 +198,7 @@
   \frametitle{Example on XSS Attack}
   You can follow this command to make custom fuzzing:
   \begin{itemize}
-   \item  ./0d1n --host http://localhost/ --custom my\_request.txt --payloads payloads/xss.txt --find\_regex\_list payloads/guess.txt  --log 133oooo5 --save\_response --timeout 5
+   \item  ./0d1n --host http://localhost/ --custom my\_request.txt --payloads payloads/xss.txt --find\_string\_list payloads/guess.txt  --log 133oooo5 --save\_response --timeout 5
   \end{itemize}
 \end{frame}
 
